# ib-trader

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  FOREX_DATA_API_README.md  LICENSE  README.md  REAL_TIME_SIMULATION_GUIDE.md  pyproject.toml  requirements.txt
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  setup.sh  tws.desktop
.devcontainer/ansible/: ansible.cfg  setup.yml
doc/: build-dev-container.md  postgresql.md  project-structure.md  remote-desktop.md  tws.md
include/ibalgotrade/core/: order.hpp
python/ibalgotrade/: __init__.py  verification.py
src/core/: order.cpp
src/pybind/: module.cpp
tests/cpp/: test_order_book.cpp
tests/python/: test_verification.py
