[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "ibalgotrade"
version = "0.1.0"
description = "Interactive Brokers algorithmic trading — C++ core with Python verification"
requires-python = ">=3.12"
dependencies = ["pandas", "numpy", "matplotlib"]

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
cmake.args = ["-DBUILD_TESTS=OFF"]
wheel.install = ["python/ibalgotrade"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
